# AdvancedShell

./: .gitignore  CMakeLists.txt  README.md
docs/: internal_architecture.md  technical_deep_dive.md
include/: completer.hpp  executor.hpp  git_info.hpp  highlighter.hpp  history.hpp  prompt.hpp  shell.hpp
src/: completer.cpp  executor.cpp  git_info.cpp  highlighter.cpp  history.cpp  main.cpp  prompt.cpp  shell.cpp
